account side begin

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,12 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <string-array name="navigation_menu_item_names">
+        <item>طرف حساب</item>
+        <item>محصولات</item>
+        <item>تراکنش ها</item>
+        <item>خرید و فروش</item>
+        <item>تنظیمات</item>
+    </string-array>
 </resources>
