--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
         <item>محصولات</item>
         <item>خرید و فروش</item>
         <item>تراکنش ها</item>
+        <item>حساب ها</item>
         <item>تنظیمات</item>
     </string-array>
 </resources>
