sanad zadan date

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
         <item>خرید و فروش</item>
         <item>تراکنش ها</item>
         <item>حساب ها</item>
+        <item>صورت حساب</item>
         <item>تنظیمات</item>
     </string-array>
 </resources>
