--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyAccountingApp</string>
+    <string name="app_name">SAN</string>
     <string name="title_activity_main">MainActivity</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -14,6 +14,6 @@
         <item>تراکنش ها</item>
         <item>حساب ها</item>
         <item>صورت حساب</item>
-        <item>تنظیمات</item>
+        <!--<item>تنظیمات</item>-->
     </string-array>
 </resources>
